cleaned-up: synched swagger doc
